# ProcessLyzer

./: CMakeLists.txt  README.md
app/: processlyzer_main.cpp
include/: ignored_processes.h  process.h  process_analyzer.h  process_parser.h
src/: process.cpp  process_analyzer.cpp  process_parser.cpp
tests/: process_parser_tests.cpp
